; ModuleID = '/home/carl/AnghaBench/ish/fs/extr_fake.c_db_prepare.c'
source_filename = "/home/carl/AnghaBench/ish/fs/extr_fake.c_db_prepare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mount = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.mount*, i8*)* @db_prepare to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @db_prepare(%struct.mount* %0, i8* %1) #0 {
  %3 = alloca %struct.mount*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store %struct.mount* %0, %struct.mount** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.mount*, %struct.mount** %3, align 8
  %7 = getelementptr inbounds %struct.mount, %struct.mount* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i8*, i8** %4, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = call i64 @strlen(i8* %10)
  %12 = add nsw i64 %11, 1
  %13 = call i32 @sqlite3_prepare_v2(i32 %8, i8* %9, i64 %12, i32** %5, i32* null)
  %14 = load %struct.mount*, %struct.mount** %3, align 8
  %15 = call i32 @db_check_error(%struct.mount* %14)
  %16 = load i32*, i32** %5, align 8
  ret i32* %16
}

declare dso_local i32 @sqlite3_prepare_v2(i32, i8*, i64, i32**, i32*) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @db_check_error(%struct.mount*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
